--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #showcase {
   position: relative;
-  background: url("https://images.unsplash.com/photo-1234567890abcdef?ixlib=rb-1.2.1&auto=format&fit=crop&w=1080&q=80");
+  background: url("../img/douglas-schneiders-27vyodLOTwM-unsplash.jpg");
   background-position: 0px 0px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,11 +16,21 @@
 
 #services {
   position: relative;
-  background: url("https://source.unsplash.com/hM5NONzbyTY/5498x3341");
+  background: url("../img/anita-austvika-6xqQ9whjU0c-unsplash.jpg");
   background-position: 0 0;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; }
+ #services .bg-dark {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px; /* apply rounded edges here */
+  }
+
+  #Dreambooth .card .card-body iframe {
+    width: 100%;
+    height: auto;
+  }
 
 /*                  // trying to make this work properly :\
 #services .dark-overlay {
@@ -58,7 +68,7 @@
 
 #contact .card:hover {
   position: relative;
-  background: url("https://source.unsplash.com/Y4Th0DPWUD0/2000x3000");
+  background: url("../img/nagy-arnold-Y4Th0DPWUD0-unsplash\ \(2\).jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
